--- a/food-app/templates/recipe_update.html
+++ b/food-app/templates/recipe_update.html
@@ -9,12 +9,6 @@
 <script>
 //Makes the get request that pulls list of recipes
 function load_data(data){
-  console.log(data)
-  //data = String(data)
-  //data = data.replace(/[\[\]"]+/g,'');
-  //data = data.split(',');
-  //console.log(data['items'])
-
   var r = document.getElementById('recipe_form');
   r.setAttribute('onsubmit', "return post_request()");
 
@@ -73,7 +67,7 @@ function fill_selection(){
 <script>
 //Builds the table containing the recipe
 function createTable(tableData) {
-
+  console.log(tableData)
   var table = document.getElementById('recipe_table')
   while(table.rows.length > 1) {
   table.deleteRow(-1);
@@ -197,7 +191,7 @@ function post_request(){
   $('#recipe_table tr').has('td').each(function() {
       var arrayItem = {};
       $('td', $(this)).each(function(index, item) {
-          arrayItem[headers[index]] = $(item).find('input').val()//.html();
+          arrayItem[headers[index]] = $(item).find('input').val()
       });
       array.push(arrayItem);
   });
@@ -215,7 +209,7 @@ function post_request(){
     var item = array[i]
     item['Recipe_Name'] = recipe_name
   }
-  //console.log(array)
+
   var data = JSON.stringify(array);
 
   url = "/recipes"
