Fixing extra data in food alt name.

--- a/food-app/templates/grocery_list.html
+++ b/food-app/templates/grocery_list.html
@@ -166,7 +166,7 @@ function createItemList(){
 <script type="text/javascript">
 //Builds the table containing the grocery list
 function createTable(tableData) {
-
+  console.log(tableData)
   var table = document.getElementById('grocery_table')
 
   var tableBody = document.createElement('tbody');
