--- a/food-app/templates/grocery_list.html
+++ b/food-app/templates/grocery_list.html
@@ -109,8 +109,10 @@ function addToList(tableid, listid){
   <input type="submit" value="Submit">
   <br/>
 </form>
+<div id="ListButtons">
 <input id="clickMe" type="button" value="Sort Grocery List" onclick="sortTable();" />
 <input id="clickMe" type="button" value="Pull List" onclick="pullList();" />
+</div>
 </div>
 
 <script type="text/javascript">
